--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,8 @@ baseURL = 'https://mack.sh/'
 languageCode = 'en-us'
 title = 'McSite'
 theme = 'ananke'
+[params]
+  subtitle = 'jtmack\'s site'
+  [params.contact]
+    email = 'jim@mack.sh'
+    phone = '+1 (415) 805-1415'
