--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseurl = "/"
 languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
-theme = "terminal"
+# theme = "terminal"
 pagination.pagerSize = 5
 
 # Required for Chroma and the custom syntax highlighting.
@@ -106,9 +106,9 @@ pagination.pagerSize = 5
           url = "/showcase"
 
 [module]
-  # In case you would like to make changes to the theme and keep it locally in you repository,
-  # uncomment the line below (and correct the local path if necessary).
-  # --
-  # replacements = "github.com/panr/hugo-theme-terminal/v4 -> themes/terminal"
-#[[module.imports]]
-#  path = 'github.com/panr/hugo-theme-terminal/v4'
+# In case you would like to make changes to the theme and keep it locally in you repository,
+# uncomment the line below (and correct the local path if necessary).
+# --
+# replacements = "github.com/panr/hugo-theme-terminal/v4 -> themes/terminal"
+[[module.imports]]
+  path = 'github.com/panr/hugo-theme-terminal/v4'
