--- a/hugo.toml
+++ b/hugo.toml
@@ -109,6 +109,10 @@ pagination.pagerSize = 5
           identifier = "stuff"
           name = "Stuff"
           url = "/stuff"
+        [[languages.en.menu.main]]
+          identifier = "scrobbles"
+          name = "Scrobbles"
+          url = "/scrobbles"
 
 [module]
 # In case you would like to make changes to the theme and keep it locally in you repository,
