--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 /public
 /resources
 .DS_Store
+
+# Environment files
+.env
+.env.local
+.env.production
+
+# Sensitive data
+data/scrobbles.json
+assets/data/scrobbles.json
+
+# Dynamic files (not using these approaches)
+layouts/shortcodes/scrobbles-dynamic.html
+functions/
