--- a/.github/workflows/update-scrobbles.yml
+++ b/.github/workflows/update-scrobbles.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: # Allow manual trigger
 
 permissions:
-  contents: read
+  contents: write
   deployments: write
   pages: write
   id-token: write
