--- a/.github/workflows/update-scrobbles-cloudflare-build.yml
+++ b/.github/workflows/update-scrobbles-cloudflare-build.yml
@@ -6,6 +6,12 @@ on:
     - cron: '0 */6 * * *'
   workflow_dispatch: # Allow manual trigger
 
+permissions:
+  contents: write
+  deployments: write
+  pages: write
+  id-token: write
+
 jobs:
   update-scrobbles:
     runs-on: ubuntu-latest
@@ -34,7 +40,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add assets/data/scrobbles.json
         git commit -m "Update scrobbles [skip ci]" || exit 0
-        git push
+        git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git main
         
     - name: Trigger Cloudflare Pages build
       env:
